# DayJerry

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tb/: cli.py  diff.py  models.py  redact.py  snapshot.py  storage.py  summarize.py  todoist_client.py
tests/: test_diff.py  test_heuristics.py  test_redact.py  test_snapshot_fixture.py
tests/fixtures/: labels.json  projects.json  tasks.json
